Project Details page revamp

--- a/web/app/common/components/status-icon/status-icon.component.scss
+++ b/web/app/common/components/status-icon/status-icon.component.scss
@@ -1,3 +1,14 @@
+:host {
+    font-size: 24px;
+    width: 24px;
+    height: 24px;
+    .mat-icon {
+        width: inherit;
+        height: inherit;
+        font-size: inherit;
+    }
+}
+
 .fci-status-icon-success {
     color: #00897b;
 }
