--- a/web/app/dashboard/dashboard.component.scss
+++ b/web/app/dashboard/dashboard.component.scss
@@ -33,7 +33,7 @@
     .mat-row {
         cursor: pointer;
         &:hover {
-            background-color: #F3E5F5
+            background-color: #F3E5F5;
         }
         .mat-cell {
             white-space: nowrap;
